dependency on wccurlclient

--- a/webcamclientviewer.lpi
+++ b/webcamclientviewer.lpi
@@ -191,15 +191,18 @@
     <RunParams>
       <FormatVersion Value="2"/>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="3">
       <Item1>
-        <PackageName Value="commonutils_ilya2ik"/>
+        <PackageName Value="wcwebcamcurlclient"/>
       </Item1>
       <Item2>
-        <PackageName Value="LCL"/>
+        <PackageName Value="commonutils_ilya2ik"/>
       </Item2>
+      <Item3>
+        <PackageName Value="LCL"/>
+      </Item3>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="4">
       <Unit0>
         <Filename Value="webcamclientviewer.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -212,23 +215,19 @@
         <ResourceBaseClass Value="Form"/>
       </Unit1>
       <Unit2>
-        <Filename Value="libpascurl.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit2>
-      <Unit3>
         <Filename Value="configdlg.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="ConfDlg"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-      </Unit3>
-      <Unit4>
+      </Unit2>
+      <Unit3>
         <Filename Value="streamwin.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="StreamFrm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-      </Unit4>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
